--- a/src/app/components/dateselector/dateselector.component.html
+++ b/src/app/components/dateselector/dateselector.component.html
@@ -14,19 +14,19 @@
 
   <div class="navbar" class="ion-text-center chh-bg">
     <ion-button fill="clear" (click)="adjustDate('-1')" 
-    [ngClass]="{'active':active1, 'notactive':!active1}" 
-      class="link">
+    [ngClass]="{'active-link':active1, 'notactive':!active1}" 
+      class="link" size="small" disabled="{{readonlyComp}}">
       <ion-icon name="arrow-back-outline"></ion-icon>
     </ion-button>
     <ion-button fill="clear" (click)="adjustDate('0')" 
-    [ngClass]="{'active':active2, 'notactive':!active2}" 
-      class="link">
+    [ngClass]="{'active-link':active2, 'notactive':!active2}" 
+      class="link" size="small" disabled="{{readonlyComp}}">
       <ion-datetime [pickerOptions]="customPickerOptions" displayFormat="YYYY-MM-DD" min="2020-05-01"  max="2020-12-31" [value]="selectedDate" ></ion-datetime>
     </ion-button>
 
     <ion-button fill="clear" (click)="adjustDate('1')" 
-    [ngClass]="{'active':active3, 'notactive':!active3}" 
-      class="link">
+    [ngClass]="{'active-link':active3, 'notactive':!active3}" 
+      class="link" size="small" disabled="{{readonlyComp}}">
       <ion-icon name="arrow-forward-outline"></ion-icon>
     </ion-button>
   
