--- a/src/app/components/inpatientmodal/inpatientmodal.page.html
+++ b/src/app/components/inpatientmodal/inpatientmodal.page.html
@@ -4,37 +4,383 @@
     <div>Close <ion-icon name="close-outline"  ></ion-icon></div>
   </ion-toolbar>
 </ion-header-->
-<ion-header mode="md" role="banner" class="ios header-ios header-translucent header-collapse-none header-translucent-ios hydrated"><!----><div class="header-background"></div>
+
+
+<!--ion-header mode="md" role="banner" class="ios header-ios header-translucent header-collapse-none header-translucent-ios hydrated"><div class="header-background"></div>
   <ion-toolbar class="in-toolbar ios toolbar-title-default hydrated" color="mango">
     <ion-title class="ios title-default hydrated">Patient Detail</ion-title>
     <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated">
-      <ion-button (click)="closeModal()" class="ios button button-clear ion-activatable ion-focusable hydrated">Close</ion-button>
+    
     </ion-buttons>
   </ion-toolbar>
+</ion-header-->
+
+<!--ion-toolbar>
+  <ion-buttons slot="end" >
+    <ion-button (click)="closeModal()" routerDirection="back" class="ios button button-clear ion-activatable ion-focusable hydrated" color="danger">Close</ion-button>
+  </ion-buttons>
+</ion-toolbar-->
+<ion-header mode="md" class="ion-no-border">
+
+  <ion-toolbar  color="mango" >
+    <ion-title>
+       Patient Detail
+    </ion-title>
+    <ion-buttons slot="end" class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated" >
+      <ion-button (click)="closeModal()" class="ios button button-clear ion-activatable ion-focusable hydrated" color="danger">Close&nbsp; <ion-icon name="close-outline"></ion-icon></ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+
+
 </ion-header>
 
+
 <ion-content>
- 
+<!--
+<ion-item>
+<ion-label>
+  <b>{{data.last_name}}, {{data.first_name}} {{data.middle_name}}</b>
+</ion-label>
+</ion-item>
+<ion-item>
+<ion-label>
+  Admission Date : {{data.admission_date }}
+</ion-label>
+</ion-item>
+<ion-item>
+<ion-label>
+  Admission Status : {{data.admission_status}}
+</ion-label>
+</ion-item>
+<ion-item>
+<ion-label>
+  <div *ngIf="data.site == 'C'">
+    Location : Chong Hua Hospital (Cebu City)<br />
+  </div>
+  <div *ngIf="data.site == 'M'">
+    Location : Chong Hua Hospital Mandaue
+  </div> 
+</ion-label>
+</ion-item>
+<ion-item>
+<ion-label>
+  Room No. : {{data.room_no}}
+</ion-label>
+</ion-item>
+<ion-item button (click)='detail(data.admission_no)'  detail>
+<ion-label >
+  <b>Doctor's Fee :  {{professionalFee}}</b>
+</ion-label>
+</ion-item>
+<ion-item>
+<ion-label>
+  <b>Remarks : {{remarks}}</b>
+</ion-label>
+</ion-item>
+<ion-item-divider></ion-item-divider>
+<ion-item>
+<p>
+  <b>Primary Attending Pysician</b><br />
+  &nbsp;&nbsp;&nbsp;Dr. Reginita Uy<br />
+  <b>Co-Manage</b><br />
+  &nbsp;&nbsp;&nbsp;Dr. Joel Yu<br />
+  &nbsp;&nbsp;&nbsp;Dr. Gary Galon
+</p>
+</ion-item>
+-->
 
 
 
- <ion-card>
-  <ion-card-header>
-    <ion-card-title>{{data.last_name}}, {{data.first_name}} {{data.middle_name}}</ion-card-title>
-  </ion-card-header>
 
-  <ion-card-content>
-    Admission Date : {{data.admission_date}}<br />
-    Admission Status : {{data.admission_status}}<br />
-    Location : {{data.site}}<br />
-    Room No. : {{data.room_no}}<br />
-    Doctor's Fee :  {{data.doctor_prof_fee}}<br />
-    <ion-button color="mango" (click)='detail(data.admission_no)'  >
-      Doctors Fee</ion-button>
+<ion-card>
+<ion-list>
+  <ion-item lines="none">
+    <ion-avatar slot="start">
+      <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+    </ion-avatar>
+    <ion-label>
+      <ion-item class="ion-no-padding">
+        <h3 class="ion-text-wrap ">{{data.last_name}}, {{data.first_name}} {{data.middle_name}}</h3>
+        <ion-badge
+        color="warning"
+        slot="end"
+        *ngIf="data.admission_status == 'DN' && data.doctor_prof_fee == null && data.is_posted ==null">
+        PF</ion-badge>
+      <ion-badge
+        color="success"
+        slot="end"
+        *ngIf="data.doctor_prof_fee != null && data.is_posted !=null">
+        PF OK</ion-badge>
+      </ion-item>
+      <div class="ion-text-wrap" style="padding-top:5px">
+        <div *ngIf="data.site == 'C'">
+          <ion-icon name="location-outline" slot="start"></ion-icon>
+          Chong Hua Hospital (Cebu)
+        </div>
+        <div  *ngIf="data.site == 'M'">
+          <ion-icon name="location-outline" slot="start"></ion-icon>
+          Chong Hua Hospital Mandaue
+        </div>
+        <div>
+          <ion-icon name="bed-outline" slot="start"></ion-icon>
+          Room {{data.room_no}}
+        </div>
+    </div>
 
-  </ion-card-content>
+    </ion-label>
+  </ion-item>
+  <ion-item lines="none" style="padding-bottom: 10px;">
+  <div class="ion-text-wrap">
+    <ion-text *ngIf="data.admission_status == 'AC'">Status : Admitted<br /></ion-text>
+    <ion-text *ngIf="data.admission_status == 'DN'">Status : For Discharge<br /></ion-text>
+    <ion-text>Admission Date : {{data.admission_date}}</ion-text>
+  </div>
+  </ion-item>
+</ion-list>
 </ion-card>
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <ion-card *ngIf="data.admission_status == 'DN'">
+    <ion-list>
+      <ion-item style="padding-top: 10px;">
+        <div class="ion-text-wrap">
+          <b>Professional Fee</b><br />
+          <ion-text style="padding-top: 15px;">Amount : {{professionalFee}}<br /></ion-text>
+          <ion-text>Remarks : {{remarks}}</ion-text>
+        </div>
+      </ion-item>
+      <ion-item lines="none">
+        <ion-button slot="end" (click)='detail(data.admission_no)' color="mango" *ngIf="data.is_posted == 0 || data.is_posted == null">Update</ion-button>
+      </ion-item>
+    </ion-list>
+  </ion-card>
+
+
+
+
+
+<ion-card>
+  <ion-list>
+    <ion-item lines="none">
+      <ion-avatar slot="start">
+        <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+      </ion-avatar>
+      <ion-label>
+        <ion-item class="ion-no-padding">
+          <h3 class="ion-text-wrap ">Dr. Reginita Uy</h3>
+        </ion-item>
+        <div class="ion-text-wrap" style="padding-top:5px"><p>Primary Attending Physician</p></div>
+        </ion-label>
+    </ion-item>
+
+    <ion-item lines="none">
+      <ion-avatar slot="start">
+        <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+      </ion-avatar>
+      <ion-label>
+        <ion-item class="ion-no-padding">
+          <h3 class="ion-text-wrap ">Dr. Joel Yu</h3>
+        </ion-item>
+        <div class="ion-text-wrap" style="padding-top:5px"><p>Co - Manage</p></div>
+        </ion-label>
+    </ion-item>
+
+    <ion-item lines="none">
+      <ion-avatar slot="start">
+        <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+      </ion-avatar>
+      <ion-label>
+        <ion-item class="ion-no-padding">
+          <h3 class="ion-text-wrap ">Dr. Gary Galon</h3>
+        </ion-item>
+        <div class="ion-text-wrap" style="padding-top:5px"><p>Co - Manage</p></div>
+        </ion-label>
+    </ion-item>
+  </ion-list>
+</ion-card>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+
+
+<ion-card>
+<ion-item lines="none">
+  <ion-avatar slot="start">
+    <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+  </ion-avatar>
+  <ion-label>
+    <ion-item class="ion-no-padding">
+      <h3 class="ion-text-wrap ">{{data.last_name}}, {{data.first_name}} {{data.middle_name}}</h3>
+      <ion-badge color="warning" slot="end" *ngIf="professionalFee == null">PF</ion-badge>
+      <ion-badge color="success" slot="end"  *ngIf="professionalFee != null">PF</ion-badge>
+    </ion-item>
+    <ion-row class="ion-no-padding" lines="none" style="padding-top:5px">
+    
+        <p *ngIf="data.site == 'C'">
+          <ion-icon name="location-outline" slot="start"></ion-icon>
+          Chong Hua Hospital (Cebu)
+        </p>
+        <p  *ngIf="data.site == 'M'">
+          <ion-icon name="location-outline" slot="start"></ion-icon>
+          Chong Hua Hospital Mandaue
+        </p>
+      <p>
+        <ion-icon name="bed-outline" slot="start"></ion-icon>
+        Room {{data.room_no}}
+      </p><br />
+    </ion-row> 
+    <ion-row class="ion-text-wrap ">
+      <p>Status : {{data.admission_status}}</p>
+      <p>Admission Date : {{data.admission_date}}</p>
+    </ion-row>  
+  </ion-label>
+</ion-item>
+</ion-card>
+
+
+
+<ion-card>
+<ion-item lines="none">
+  <ion-avatar slot="start">
+    <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+  </ion-avatar>
+  <ion-label>
+    <ion-item class="ion-no-padding">
+      <h3 class="ion-text-wrap ">{{data.last_name}}, {{data.first_name}} {{data.middle_name}}</h3>
+      <ion-badge color="warning" slot="end" *ngIf="professionalFee == null">PF</ion-badge>
+      <ion-badge color="success" slot="end"  *ngIf="professionalFee != null">PF</ion-badge>
+    </ion-item>
+    <ion-row class="ion-no-padding" lines="none">
+      <div *ngIf="data.site == 'C'">
+        <p>
+          <ion-icon name="location-outline" slot="start"></ion-icon>
+          Chong Hua Hospital (Cebu)
+        </p>
+        <p>
+          <ion-icon name="bed-outline" slot="start"></ion-icon>
+          Room {{data.room_no}}
+        </p>
+      </div>
+      <div *ngIf="data.site == 'M'">
+        <p>
+          <ion-icon name="location-outline" slot="start"></ion-icon>
+          Chong Hua Hospital Mandaue
+        </p>
+        <p>
+          <ion-icon name="bed-outline" slot="start"></ion-icon>
+          Room {{data.room_no}}
+        </p>
+      </div>
+      
+    </ion-row> 
+  </ion-label>
+</ion-item>
+
+
+
+
+<ion-card-content>
+  <h3>{{data.Doctor_Status}}</h3>
+  {{data.admission_status}}<br />
+  Admission Date : {{data.admission_date}}
+  <ion-item button (click)='detail(data.admission_no)'  class="ion-no-padding">
+    <ion-label >
+      <b>Doctor's Fee :  {{professionalFee}}</b>
+    </ion-label>
+  </ion-item>
+  <ion-item  class="ion-no-padding">
+    <ion-label>
+      <b>Remarks : {{remarks}}</b>
+    </ion-label>
+  </ion-item><br />
+  <b>Primary Attending Physician</b><br />
+  Dr. Reginita Uy<br />
+  <b>Co - Manage</b><br />
+  Dr. Joel Yu<br />
+  Dr. Gary Galon
+</ion-card-content>
+
+</ion-card>
+-->
+
+
+
+
+
+
+
+
+
+
+
 </ion-content>
+
+
+<!--ion-card>
+<ion-item>
+  <ion-avatar slot="start">
+    <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+  </ion-avatar>
+  <ion-label>
+    <h3>John Doe</h3>
+    <p>Dec 10, 2019</p>
+  </ion-label>
+</ion-item>
+
+
+
+<ion-card-content>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus iaculis mollis ligula sed ultrices.
+</ion-card-content-->
+
+<!--ion-footer>
+  <ion-row>
+    <ion-col center text-center>
+      <button>
+        <ion-icon name="thumbs-up"></ion-icon>
+        <div>1.5k Likes</div>
+      </button>
+    </ion-col>
+    <ion-col center text-center>
+      <button>
+        <ion-icon name="text"></ion-icon>
+        <div>4 Comments</div>
+      </button>
+    </ion-col>
+    <ion-col center text-center>
+      <button>
+        <ion-icon name="time"></ion-icon>
+        <div>11h ago</div>
+      </button>
+    </ion-col>
+  </ion-row>
+</ion-footer>
+</ion-card-->
