--- a/src/app/page/index/index.page.html
+++ b/src/app/page/index/index.page.html
@@ -1,10 +1,17 @@
 
 <ion-content><ion-grid>
     <ion-row>
-      <ion-col size-lg="6" size-md="6" offset-md="3 " size-sm="6" size="12" >
+      <ion-col size-lg="6"  size-md="6" offset-md="3 " size-sm="6" size="12" >
                 <app-slides ></app-slides>
-                <app-start></app-start> 
+      
             </ion-col>
         </ion-row>
+        <ion-row>
+          <ion-col size-lg="2" offset-md="5"  >
+
+                    <app-start></app-start> 
+                </ion-col>
+            </ion-row>
       </ion-grid>
+      
       </ion-content>
