cleaned the codes for refactoring & addded the CoDoctors

--- a/src/app/components/start/start.component.html
+++ b/src/app/components/start/start.component.html
@@ -1,1 +1,1 @@
-<ion-button expand="block" (click)="navigateToLoginPage()">Start</ion-button>
+<ion-button expand="block" (click)="navigateToLoginPage()" color="mango">Start</ion-button>
