--- a/src/app/page/login/login.page.html
+++ b/src/app/page/login/login.page.html
@@ -1,11 +1,5 @@
-
-
-
 <ion-content>
-
-
-
-  <ion-grid class="my-backbround">
+  <ion-grid>
     <ion-row>
       <ion-col size-md="4" offset-md="4">
           <ion-card>
@@ -53,3 +47,8 @@
   </ion-row>
   </ion-grid>
 </ion-content>
+<ion-footer class="ion-no-border">
+  <ion-toolbar>
+    <p>v0.0.1</p>
+  </ion-toolbar>
+</ion-footer>
