--- a/src/app/components/inpatientmodal/inpatientmodal.page.html
+++ b/src/app/components/inpatientmodal/inpatientmodal.page.html
@@ -95,8 +95,11 @@
 <ion-card>
 <ion-list>
   <ion-item lines="none">
-    <ion-avatar slot="start">
+    <!--ion-avatar slot="start">
       <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+    </ion-avatar-->
+    <ion-avatar slot="start">
+      <text-avatar [text]="data.last_name" [color]=""></text-avatar>
     </ion-avatar>
     <ion-label>
       <ion-item class="ion-no-padding">
@@ -178,7 +181,23 @@
 
 <ion-card>
   <ion-list>
-    <ion-item lines="none">
+
+    <ion-item lines="none" *ngFor="let dr of coDoctors">
+      <ion-avatar slot="start">
+        <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+      </ion-avatar>
+      <ion-label>
+        <ion-item class="ion-no-padding">
+          <h3 class="ion-text-wrap "><a href="tel: {{dr.mobile_no}}">Dr. {{dr.first_name}} {{dr.last_name}}</a></h3>
+        </ion-item>
+        <div class="ion-text-wrap" style="padding-top:5px"><p>{{dr.status}}</p></div>
+        </ion-label>
+    </ion-item>
+
+
+
+
+    <!--ion-item lines="none">
       <ion-avatar slot="start">
         <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
       </ion-avatar>
@@ -212,7 +231,7 @@
         </ion-item>
         <div class="ion-text-wrap" style="padding-top:5px"><p>Co - Manage</p></div>
         </ion-label>
-    </ion-item>
+    </ion-item-->
   </ion-list>
 </ion-card>
 
