--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -15,9 +15,9 @@
     </ion-row>
     <ion-row >
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4" class=" ion-no-border ">
-        <ion-item-divider  sticky="true" color="light">
+
           <ion-searchbar [(ngModel)]="searchBar" (ionChange)="filterList()" mode="ios"></ion-searchbar>
-        </ion-item-divider>
+
       </ion-col>
     </ion-row>
   </ion-grid>
@@ -27,24 +27,8 @@
 
 <ion-content >
   
-  <!--ion-refresher 
-    slot="fixed"
-    id="refresher"
-    class="refresher-native"
-    (ionRefresh)="doRefresh($event)"
-    pullFactor="1"
-    pullMin="100"
-    pullMax="200"
-    *ngIf="!isDesktop">
-      <ion-refresher-content 
-
-        pullingIcon="refresh-outline"
-        refreshingSpinner="dots">
-      </ion-refresher-content>
-  </ion-refresher-->
-
-  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content></ion-refresher-content>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" mode="ios">
+    <ion-refresher-content ></ion-refresher-content>
   </ion-refresher>
 
 
@@ -65,17 +49,17 @@
          <div  *ngFor="let x of inPatients">
           
 
-
-     
           <ion-card (click)='detail(x)' mode="ios">
             <ion-item lines="none">
-              <ion-avatar slot="start">
+              <!--ion-avatar slot="start">
                 <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
+              </ion-avatar-->
+              <ion-avatar slot="start">
+                <text-avatar [text]="x.last_name" [color]=""></text-avatar>
               </ion-avatar>
-              <ion-label>
-                <ion-item  lines="none">
+              <ion-label >
+                <ion-item   slot="start" lines="none"  class="ion-no-padding" >
                   <h3 class="ion-text-wrap ">{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</h3>
-                
                   <ion-badge
                     color="warning"
                     slot="end"
@@ -87,103 +71,43 @@
                     *ngIf="x.doctor_prof_fee != null && x.is_posted !=null">
                     <ion-icon name="checkmark-outline"></ion-icon></ion-badge>
                 </ion-item>
-                <div *ngIf="x.admission_status == 'AC'" value=".25" buffer="0.5">
-                 <!--Patient Admitted--> 
-                  <ion-progress-bar value=".25" buffer="0.75" color="warning"></ion-progress-bar>
-              </div>
-              <div *ngIf="x.admission_status == 'DN'  && (x.is_posted ==null || x.is_posted ==0 ) && x.doctor_prof_fee ==null">
-                  <!--Patient For Discharge-->
-                  <ion-progress-bar value=".50" buffer="0.75" color="warning"></ion-progress-bar>
-              </div>
-              <div  *ngIf="x.admission_status == 'DN'  && (x.is_posted ==null|| x.is_posted ==0 ) && x.doctor_prof_fee !=null">
+                <div *ngIf="x.admission_status == 'AC'" >
+                <!--Patient Admitted--> 
+                <ion-progress-bar value=".25" buffer="0.35" color="warning"></ion-progress-bar>
+                </div>
+                <div *ngIf="x.admission_status == 'DN'  && (x.is_posted ==null || x.is_posted ==0 ) && x.doctor_prof_fee ==null">
                 <!--Patient For Discharge-->
-                <ion-progress-bar value=".75" buffer="0.75"color="warning"></ion-progress-bar>
-              </div>
-              <div *ngIf="x.admission_status == 'DN'  && x.is_posted !=0 && x.doctor_prof_fee !=null">
+                <ion-progress-bar value=".50" buffer="0.60" color="warning"></ion-progress-bar>
+                </div>
+                <div  *ngIf="x.admission_status == 'DN'  && (x.is_posted ==null|| x.is_posted ==0 ) && x.doctor_prof_fee !=null">
                 <!--Patient For Discharge-->
-                <ion-progress-bar value="1" buffer="0.75"color="mango"></ion-progress-bar>
-              </div>   
-                <ion-row class="ion-no-padding" lines="none" style="padding-top:10px !important;">
-                  <p>
-                    <span *ngIf="x.site == 'C'">
-                      <ion-icon name="location-outline" slot="start"></ion-icon>Chong Hua Hospital
-                    </span>
-                    <span *ngIf="x.site == 'M'">
-                      <ion-icon name="location-outline" slot="start"></ion-icon>Chong Hua Hospital Mandaue
-                    </span><br />
-                      <ion-icon name="bed-outline" slot="start"></ion-icon>Room {{x.room_no}}<br />
-                      <!--ion-icon name="body-outline"></ion-icon>Patient Journey<br /-->
-                    </p>
-                  <br />
-                </ion-row>     
-               
-
-                    
-                 <!-- Admitted
-                  <ion-progress-bar value="0.25"></ion-progress-bar>
-                  For Discharge(PF Required)
-                  <ion-progress-bar value="0.50"></ion-progress-bar>
-                  For Discharge(PF Validated)
-                  <ion-progress-bar value="0.75" ></ion-progress-bar>
-                  For Discharge(PF Posted)
-                  <ion-progress-bar value="1" color="mango"></ion-progress-bar>-->
-
-      
+                <ion-progress-bar value=".75" buffer="0.85"color="warning"></ion-progress-bar>
+                </div>
+                <div *ngIf="x.admission_status == 'DN'  && x.is_posted !=0 && x.doctor_prof_fee !=null">
+                <!--Patient For Discharge-->
+                <ion-progress-bar value="1" color="mango"></ion-progress-bar>
+                </div>
+              
+              
+              
+              <ion-row class="ion-no-padding" lines="none" style="padding-top:10px !important;">
+                <p>
+                  <span *ngIf="x.site == 'C'">
+                    <ion-icon name="location-outline" slot="start"></ion-icon>Chong Hua Hospital
+                  </span>
+                  <span *ngIf="x.site == 'M'">
+                    <ion-icon name="location-outline" slot="start"></ion-icon>Chong Hua Hospital Mandaue
+                  </span><br />
+                    <ion-icon name="bed-outline" slot="start"></ion-icon>Room {{x.room_no}}<br />
+                    <!--ion-icon name="body-outline"></ion-icon>Patient Journey<br /-->
+                  </p>
+                <br />
+              </ion-row>     
               </ion-label>
             </ion-item>
           </ion-card>
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         </div>
-          <!--div  *ngFor="let x of inPatients">
-            <ion-list
-              class="ios list-ios hydrated ion-activatable ripple-parent"
-              (click)='detail(x)'  >
-                <ion-item 
-                  class="item ios in-list ion-focusable item-label hydrated " >
-                    <ion-avatar
-                      slot="start"
-                      class="ios hydrated">
-                        <img src="https://bitbucket.org/chonghuahospital-it/chh-it-ibm-virtual-assistant-images/downloads/kdamora-sample-pic-for-ionic-avatar.jpg">
-                    </ion-avatar>
-                    <ion-label
-                      class="sc-ion-label-ios-h sc-ion-label-ios-s ios hydrated">
-                        <h3>{{ x.last_name }}, {{ x.first_name }} {{ x.middle_name }}</h3>
-                        
-                        <div *ngIf="x.site == 'C'">
-                          Chong Hua Hospital (Cebu City)<br />Room {{x.room_no}}<br />
-                        </div>
-                        <div *ngIf="x.site == 'M'">
-                          Chong Hua Hospital Mandaue<br />Room {{x.room_no}}
-                        </div> 
-                        <i>{{x.Doctor_Status}}</i> 
-                        <div>{{x.admission_status}}</div> 
-                        <div *ngIf="x.doctor_prof_fee == null">
-                          <ion-badge color="warning" slot="end" *ngIf="x.doctor_prof_fee == null">without PF</ion-badge>
-                        </div> 
-                        <div *ngIf="x.doctor_prof_fee != null">
-                        <ion-badge color="success" *ngIf="x.doctor_prof_fee != null">PF</ion-badge>
-                        </div> 
-                    </ion-label>
-                </ion-item>
-            </ion-list>
-          </div-->
       </ion-col>
     </ion-row>
   </ion-grid>
