Change start button label and remove app-start component footer on index.

--- a/src/app/components/start/start.component.html
+++ b/src/app/components/start/start.component.html
@@ -1,1 +1,1 @@
-<ion-button expand="block" (click)="navigateToLoginPage()" color="mango">Start</ion-button>
+<ion-button expand="block" (click)="navigateToLoginPage()" color="mango">Let's Go!</ion-button>
