--- a/src/app/page/index/index.page.html
+++ b/src/app/page/index/index.page.html
@@ -9,10 +9,10 @@
 
     </ion-grid>
 </ion-content>
-<ion-footer line="none" mode="ios">
+<!-- <ion-footer line="none" mode="ios">
     <ion-row>
         <ion-col size-lg="2" offset-md="5"  >
             <app-start></app-start> 
         </ion-col>
     </ion-row>
-  </ion-footer>
+  </ion-footer> -->
