Update Patient information page.

--- a/src/app/components/fee/fee.page.html
+++ b/src/app/components/fee/fee.page.html
@@ -14,10 +14,10 @@
   <ion-input  type="text" id="input-remarks" value="{{remarks}}"></ion-input>
 </ion-item>
 <ion-item>
-  <ion-button id="btn-confirm" (click)="save()" color="mango">
+  <ion-button size ="small" slot="start" expand="block" id="btn-confirm" (click)="save()" color="mango">
     Save
   </ion-button>
-  <ion-button id="btn-confirm" (click)="ClosePopover()" color="danger">
+  <ion-button size ="small" slot="end" expand="block" id="btn-confirm" (click)="ClosePopover()" color="danger">
     Cancel
   </ion-button>
 </ion-item>
