--- a/src/app/components/slides/slides.component.html
+++ b/src/app/components/slides/slides.component.html
@@ -1,8 +1,7 @@
 <ion-slides pager>
-  <ion-slide>
+  <ion-slide class="ion-justify-content-center">
     <app-logo></app-logo>
     <h2>We thank you, Doc!</h2>
-    <div class="center">
       <lottie-player
         src="assets/animations/21474-medical-frontliners.json"
         mode="bounce"
@@ -12,7 +11,6 @@
         loop
         autoplay
       ></lottie-player>
-    </div>
     <h1>For your courage and service. We truly appreciate it!</h1>
     <p>Swipe left to see what we've built for you.</p>
   </ion-slide>
