--- a/src/app/components/slides/slides.component.html
+++ b/src/app/components/slides/slides.component.html
@@ -1,7 +1,8 @@
 <ion-slides pager>
-  <ion-slide class="ion-justify-content-center">
+  <ion-slide>
     <app-logo></app-logo>
     <h2>We thank you, Doc!</h2>
+    <div class="center">
       <lottie-player
         src="assets/animations/21474-medical-frontliners.json"
         mode="bounce"
@@ -11,6 +12,7 @@
         loop
         autoplay
       ></lottie-player>
+    </div>
     <h1>For your courage and service. We truly appreciate it!</h1>
     <p>Swipe left to see what we've built for you.</p>
   </ion-slide>
