--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,5 +1,9 @@
   <ion-tabs *ngIf="!isDesktop" >
     <ion-tab-bar slot="bottom" >
+      <ion-tab-button tab="statistics" >
+        <ion-icon name="stats-chart-outline"></ion-icon>
+        <ion-label>Statistics</ion-label>
+      </ion-tab-button>
       <ion-tab-button tab="in-patients" >
         <ion-icon name="person-circle-outline"></ion-icon>
         <ion-label>In-Patients</ion-label>
