--- a/src/app/page/index/index.page.html
+++ b/src/app/page/index/index.page.html
@@ -3,7 +3,8 @@
     <ion-grid>
         <ion-row>
             <ion-col size-lg="6"  size-md="6" offset-md="3 " size-sm="6" size="12" >
-                <app-slides ></app-slides>
+                <!--app-slides ></app-slides-->
+                <app-slider></app-slider>
             </ion-col>
         </ion-row>
 
