--- a/src/app/components/slider/slider.page.html
+++ b/src/app/components/slider/slider.page.html
@@ -1,4 +1,4 @@
-<!--ion-slides pager>
+<ion-slides pager>
   <ion-slide>
     <app-logo></app-logo>
     <h2>We thank you, Doc!</h2>
@@ -19,13 +19,17 @@
   <ion-slide>
     <h1>View your admitted patients.</h1>
     <lottie-player
+      autoplay="true"
+      controls
+      loop
+      mode="normal"
       src="assets/animations/18646-medic-clinic.json"
       mode="bounce"
       background="transparent"
       speed="1"
       style="width: 300px; height: 300px;"
-      loop
-      autoplay
+      
+      
     ></lottie-player>
     <p>
       You will be notified via SMS when you have patients admitted in the
@@ -70,4 +74,4 @@
       </ion-col>
     </ion-row>
   </ion-slide>
-</ion-slides-->
+</ion-slides>
