--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -12,7 +12,7 @@
 
 <ion-content>
   <div id="lineChart" ></div>
-  <div class="ion-padding">
+  <!--div class="ion-padding">
     <div id="barChart" ></div>
     <ion-card>
       <ion-card-header>
@@ -31,5 +31,5 @@
         <div id="pieChart" style="width:100%; height:400px;"></div>
       </ion-card-content>
     </ion-card>
-  </div>
+  </div-->
 </ion-content>
